# riksdagen-corpus

./: .gitignore  LICENSE  README.md  accuracy_upper_bound.csv  gen.py  nogender.csv  not_detected.csv  output.xml  prot-1960--fk--19-curation.xml  pyproject.toml  sanity.csv  schecks.csv  update_docs.sh
corpus/: README.md  fk_mandatperioder.json  individual.csv  location.csv  location_specifier.csv  member.csv  member_of_parliament.csv  members_of_parliament.csv  members_of_parliament_sk.csv  members_of_parliament_w.csv  minister.csv  ministers.csv  ministers_w.csv  mop_name_notes.txt  mop_riksdagen_documentation.txt  name.csv  party_abbreviation.csv  party_affiliation.csv  party_mapping.csv  party_mapping.json  prime_minister.csv  riksdagen_dates.csv  speaker.csv  speakers_w.csv  specifier.csv  suppleants.csv  talman.csv  twitter.csv  vice.csv  vice_clean.csv
docs/: index.html  pyriksdagen.html  scripts.html  search.js
examples/: corpus-walkthrough.ipynb
input/: accuracy_upper_bound.csv  most_common_unknowns.csv
pyriksdagen/: __init__.py  curation.py  dataset.py  date_handling.py  db.py  download.py  export.py  match_mp.py  metadata.py  mp.py  refine.py  requirements.txt  segmentation.py  swerik_catalog.py  utils.py  wikidata.py
rpackage/: DESCRIPTION  NAMESPACE
schemas/: README.md  dcr.tmp  parla-clarin-odd.xml  parla-clarin.dtd  parla-clarin.rnc  parla-clarin.xsd
scripts/: KWIC-iter-search.py  LICENSE  README.md  accuracy-version-plot.py  accuracy_version_plot.py  add-catalog-dob.py  add_modern_pagenumbers.py  add_uuid.py  add_uuid_to_divs.py  digorigin.py  (+66 more)
(+58641 files in other folders)
